Changes to be committed: 	modified:   api_gateway/src/main/java/com/gateway/api_gateway/services/RoomGatewayService.java 	modified:   authorization_service/pom.xml 	modified:   authorization_service/src/main/java/com/authorization/authorization_service/services/UserDatailsServiceData.java 	modified:   authorization_service/src/main/resources/application.properties 	modified:   room_management_service/src/main/resources/application.properties